# anki_translator

./: .gitignore  README.md  atdb_project.vsp  pyproject.toml
simple/: base.py  cards.py  cleaned_source.py  config.py  db.py  main.py  source.py  translated_source.py  user_source.py  utils.py  word_phrase.py
simple/cleaned_sources/: 1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt
simple/data/: atdb.db  atdb.sqbpro
simple/sources/: Stranger_Things_S03E02_WEB_DLRip_Rus_Eng_Pythagor_RGzsRutracker.srt  Stranger_Things_S03E03_WEB_DLRip_Rus_Eng_Pythagor_RGzsRutracker.srt  Stranger_Things_S03E04_WEB_DLRip_Rus_Eng_Pythagor_RGzsRutracker.srt  Stranger_Things_S03E05_WEB_DLRip_Rus_Eng_Pythagor_RGzsRutracker.srt  Stranger_Things_S03E06_WEB_DLRip_Rus_Eng_Pythagor_RGzsRutracker.srt  Stranger_Things_S03E07_WEB_DLRip_Rus_Eng_Pythagor_RGzsRutracker.srt  Stranger_Things_S03E08_WEB_DLRip_Rus_Eng_Pythagor_RGzsRutracker.srt
simple/translated_sources/: 1_1.txt  2_2.txt  3_3.txt
simple/user_sources/: 1.txt  2.txt  3.txt
simple/user_words_and_phrases/: 1_1.txt  2_2.txt  3_3.txt
