[tool.black]
line-length = 79

[tool.poetry]
name = "anki-translator"
version = "0.1.0"
description = ""
authors = ["fedor.khandar <fedor.khandar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.9.2"
aiogram = "^3.3.0"
orjson = "^3.9.12"
deep-translator = "^1.11.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
